<?xml version="1.0" encoding="utf-8"?><!--
 Copyright 2014 The Android Open Source Project

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<resources>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="action_settings">设置</string>
    <string name="dump">dump 大尺寸图片</string>
    <string name="cut_mode">剪切模式</string>
    <string name="dump_summary">对于像素大于1920*2560 的图片，缩小后在原文件夹下创建一个加dump_ 前缀的副本。</string>
    <string name="cut_summary">执行分类后将原文件夹下已分类的图片删除。</string>
    <string name="camera_id">camera id</string>
    <string name="setting_picture_size">Picture size</string>
    <string name="setting_picture_format">Picture format</string>
    <string name="setting_preview_size">Preview size</string>
    <string name="resolution">Resolution</string>
    <string name="setting_camera_value_0">0</string>
    <string name="setting_camera_value_1">1</string>
    <string name="setting_camera_value_2">2</string>
    <string name="setting_camera_value_3">3</string>
    <string name="setting_camera_id">Camera id</string>
    <string name="setting_camera_id_0">Open Camera 0</string>
    <string name="setting_camera_id_1">Open Camera 1</string>
    <string name="setting_camera_id_2">Open Camera 2</string>
    <string name="setting_camera_id_3">Open Camera 3</string>
</resources>
